# steelseries-oled

./: .gitattributes  .gitignore  .pre-commit-config.yaml  99-steelseries.rules  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup-autostart.ps1  start-stats.ps1  steelseries.spec
.github/workflows/: build.yml  ci.yml  release.yml
docs/: gen3-oled-protocol.md
src/steelseries_oled/: __init__.py  __main__.py  _signal.py  _windowless.py  cli.py  constants.py  device.py  display.py  exceptions.py  models.py  profile.py  stats.py
src/steelseries_oled/assets/: __init__.py
src/steelseries_oled/backends/: __init__.py  base.py  gamesense.py  hid.py  hid_gen3.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_constants.py  test_device.py  test_display.py  test_gamesense.py  test_models.py  test_profile.py  test_signal.py  test_stats.py
tools/: README.md  USB_CAPTURE_GUIDE.md  diagnose.py  gen3_bitmap_test.py  generate_icon.py
